--- a/locale/es.txt
+++ b/locale/es.txt
@@ -55,18 +55,18 @@ HotspotPanoramaOverlayArea_4FAFD5EE_446A_4C83_41C9_50A84E151E07.toolTip = Therma
 ### Floorplan
 
 ### Image
-imlevel_F2416344_EF17_3D72_41E5_245BE5342152.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_0.jpg
-imlevel_F2409344_EF17_3D72_41A6_BC75BBBF52D6.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_1.jpg
-imlevel_F2408345_EF17_3D72_41D5_EA7D0F89F658.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_2.jpg
-imlevel_F240D345_EF17_3D72_41E0_2219A43C08D2.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_3.jpg
-imlevel_F241932F_EF17_3D0E_41AC_EFE2FC27A71A.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_0.jpg
-imlevel_F241B32F_EF17_3D0D_41E4_A87550D17D7F.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_1.jpg
-imlevel_F241A330_EF17_3D12_41E3_433B6800762F.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_2.jpg
-imlevel_F241D330_EF17_3D12_41BA_7A4D944487BD.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_3.jpg
-imlevel_F242D31A_EF17_3D16_41E7_DD934F8C4C75.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_0.jpg
-imlevel_F242C31A_EF17_3D16_41C4_6DAC2C784DB9.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_1.jpg
-imlevel_F242E31A_EF17_3D16_41D4_5E55254FF519.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_2.jpg
-imlevel_F242131A_EF17_3D16_41E0_ECF22079E4E3.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_3.jpg
+imlevel_F1F144F3_EF19_7B16_41DF_EF81BE83DFB4.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_0.jpg
+imlevel_F1F1B4F3_EF19_7B16_41CD_1BCF2EC9FF9D.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_1.jpg
+imlevel_F1F184F3_EF19_7B16_41E0_75C3166D9194.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_2.jpg
+imlevel_F1F1E4F3_EF19_7B15_41B2_6FAA270C236F.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_3.jpg
+imlevel_F1F0B4D1_EF19_7B12_41CA_434B93F89788.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_0.jpg
+imlevel_F1F094D1_EF19_7B12_41CF_B56847150A48.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_1.jpg
+imlevel_F1F084D1_EF19_7B12_41E9_CAFAD42452A1.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_2.jpg
+imlevel_F1F0F4D1_EF19_7B12_41E9_67512EA5C4B1.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_3.jpg
+imlevel_F1F3A4B1_EF19_7B12_41D1_3161EE4868AD.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_0.jpg
+imlevel_F1F394B1_EF19_7B12_41DF_3258A97037DD.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_1.jpg
+imlevel_F1F384B1_EF19_7B12_41E7_E41E2609A23D.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_2.jpg
+imlevel_F1F3E4B2_EF19_7B16_41E9_CE821253ABF9.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_3.jpg
 imlevel_F1AD3D45_EF2B_257D_41EB_05163C392D82.url = media/popup_4404A119_555D_F631_41A5_1D53CF4C70E1_es_0_0.jpg
 imlevel_F1AD3D45_EF2B_257D_41EB_05163C392D82.url = media/popup_4404A119_555D_F631_41A5_1D53CF4C70E1_es_0_0.jpg
 imlevel_F1AD4D45_EF2B_257D_41D4_ACF934D9F85B.url = media/popup_4404A119_555D_F631_41A5_1D53CF4C70E1_es_0_1.jpg
@@ -158,7 +158,7 @@ Image_8FEB3DE2_80FF_8B29_41CF_0CE823C9CFC1.url = skin/Image_8FEB3DE2_80FF_8B29_4
 Label_59C25EAD_56AC_4A10_41CA_CB010D0C74A2.text = Photography by Jeff Davis
 
 ### Tooltip
-IconButton_E37CA9B7_E983_F12E_41E9_5FA0638D4D8D.toolTip = ACTIVATE VR MODE (MOBILE ONLY)
+IconButton_E37CA9B7_E983_F12E_41E9_5FA0638D4D8D.toolTip = ACTIVATE VR MODE (MOBILE ONLY) V2
 IconButton_EF8BF2CF_E362_CA64_41CB_5CE4DACA5634.toolTip = PANORAMA LIST
 IconButton_68CA5182_6070_7D3E_419C_BF635DC7C626.toolTip = PHOTO ALBUM
 IconButton_85265B23_8D1E_B01D_41E0_8CB2C82C1F5E.toolTip = SHOW FLOORPLANS
