--- a/locale/es.txt
+++ b/locale/es.txt
@@ -1,5 +1,37 @@
 #: locale=es
 
+## E-Learning
+
+### Answer
+questionOption_F04CE3E5_EF6F_3D32_41CE_789680758F4E.text = Nao!
+questionOption_F0B82128_EF6F_3D32_41B2_57CEC1067F41.text = Sim!
+
+### Question
+question_CF8872E8_EF6F_1F33_41E4_D840B3074F42.title = Vc compraria isso? 
+
+### Question Screen
+quizQuestion_F1A1852C_EF69_6532_41E0_FC32BB541084.ok = OK
+
+### Report Screen
+quizScore_F1A09539_EF69_6512_41E8_02B577F30A8D.title = - SCORE -
+quizScore_F1A09539_EF69_6512_41E8_02B577F30A8D.completion = Completed
+quizScore_F1A09539_EF69_6512_41E8_02B577F30A8D.questionsCorrect = Correct
+quizScore_F1A09539_EF69_6512_41E8_02B577F30A8D.downloadCSV = Download .csv
+quizScore_F1A09539_EF69_6512_41E8_02B577F30A8D.questionsIncorrect = Incorrect
+quizScore_F1A09539_EF69_6512_41E8_02B577F30A8D.items = Items Found
+quizScore_F1A09539_EF69_6512_41E8_02B577F30A8D.questions = Questions
+quizScore_F1A09539_EF69_6512_41E8_02B577F30A8D.repeat = Repeat
+quizScore_F1A09539_EF69_6512_41E8_02B577F30A8D.submitToLMS = Submit
+quizScore_F1A09539_EF69_6512_41E8_02B577F30A8D.elapsedTime = Time
+
+### Score Name
+score1.label = Score 1
+
+### Timeout Screen
+quizTimeout_F1A1B52C_EF69_6532_41C7_0F9E07FC4CEE.title = - TIMEOUT -
+quizTimeout_F1A1B52C_EF69_6532_41C7_0F9E07FC4CEE.repeat = Repeat
+quizTimeout_F1A1B52C_EF69_6532_41C7_0F9E07FC4CEE.score = View Score
+
 ## Hotspot
 
 ### Tooltip
@@ -55,18 +87,18 @@ HotspotPanoramaOverlayArea_4FAFD5EE_446A_4C83_41C9_50A84E151E07.toolTip = Therma
 ### Floorplan
 
 ### Image
-imlevel_F1F144F3_EF19_7B16_41DF_EF81BE83DFB4.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_0.jpg
-imlevel_F1F1B4F3_EF19_7B16_41CD_1BCF2EC9FF9D.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_1.jpg
-imlevel_F1F184F3_EF19_7B16_41E0_75C3166D9194.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_2.jpg
-imlevel_F1F1E4F3_EF19_7B15_41B2_6FAA270C236F.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_3.jpg
-imlevel_F1F0B4D1_EF19_7B12_41CA_434B93F89788.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_0.jpg
-imlevel_F1F094D1_EF19_7B12_41CF_B56847150A48.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_1.jpg
-imlevel_F1F084D1_EF19_7B12_41E9_CAFAD42452A1.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_2.jpg
-imlevel_F1F0F4D1_EF19_7B12_41E9_67512EA5C4B1.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_3.jpg
-imlevel_F1F3A4B1_EF19_7B12_41D1_3161EE4868AD.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_0.jpg
-imlevel_F1F394B1_EF19_7B12_41DF_3258A97037DD.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_1.jpg
-imlevel_F1F384B1_EF19_7B12_41E7_E41E2609A23D.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_2.jpg
-imlevel_F1F3E4B2_EF19_7B16_41E9_CE821253ABF9.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_3.jpg
+imlevel_F1BC7926_EF6B_2D3E_41BD_2934FB5BA997.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_0.jpg
+imlevel_F1BC6926_EF6B_2D3E_41E7_DB983BFF20EA.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_1.jpg
+imlevel_F1BF9927_EF6B_2D3E_41C6_F1A7300A5D82.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_2.jpg
+imlevel_F1BFB927_EF6B_2D3E_41D0_F340A41E37E5.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_3.jpg
+imlevel_F1BC0905_EF6B_2AF2_41D7_36DE9FA0D47C.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_0.jpg
+imlevel_F1BC2905_EF6B_2AFD_41E4_60DD0B9A94CB.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_1.jpg
+imlevel_F1BC5906_EF6B_2AFE_41E9_5EB34536147F.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_2.jpg
+imlevel_F1BC4906_EF6B_2AFE_41E4_1C1247BFC011.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_3.jpg
+imlevel_F1BCC8E4_EF6B_2B32_419D_2096BD365457.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_0.jpg
+imlevel_F1BCF8E4_EF6B_2B32_41EB_40CA041069C5.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_1.jpg
+imlevel_F1BCE8E4_EF6B_2B32_41D2_ED977E96A5E6.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_2.jpg
+imlevel_F1BC18E4_EF6B_2B32_41E5_0CAB9C0662AA.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_3.jpg
 imlevel_F1AD3D45_EF2B_257D_41EB_05163C392D82.url = media/popup_4404A119_555D_F631_41A5_1D53CF4C70E1_es_0_0.jpg
 imlevel_F1AD3D45_EF2B_257D_41EB_05163C392D82.url = media/popup_4404A119_555D_F631_41A5_1D53CF4C70E1_es_0_0.jpg
 imlevel_F1AD4D45_EF2B_257D_41D4_ACF934D9F85B.url = media/popup_4404A119_555D_F631_41A5_1D53CF4C70E1_es_0_1.jpg
@@ -158,7 +190,7 @@ Image_8FEB3DE2_80FF_8B29_41CF_0CE823C9CFC1.url = skin/Image_8FEB3DE2_80FF_8B29_4
 Label_59C25EAD_56AC_4A10_41CA_CB010D0C74A2.text = Photography by Jeff Davis
 
 ### Tooltip
-IconButton_E37CA9B7_E983_F12E_41E9_5FA0638D4D8D.toolTip = ACTIVATE VR MODE (MOBILE ONLY) V2
+IconButton_E37CA9B7_E983_F12E_41E9_5FA0638D4D8D.toolTip = ACTIVATE VR MODE (MOBILE ONLY) V3
 IconButton_EF8BF2CF_E362_CA64_41CB_5CE4DACA5634.toolTip = PANORAMA LIST
 IconButton_68CA5182_6070_7D3E_419C_BF635DC7C626.toolTip = PHOTO ALBUM
 IconButton_85265B23_8D1E_B01D_41E0_8CB2C82C1F5E.toolTip = SHOW FLOORPLANS
