--- a/locale/es.txt
+++ b/locale/es.txt
@@ -3,11 +3,11 @@
 ## E-Learning
 
 ### Answer
-questionOption_F04CE3E5_EF6F_3D32_41CE_789680758F4E.text = Nao!
-questionOption_F0B82128_EF6F_3D32_41B2_57CEC1067F41.text = Sim!
+questionOption_CF9EAFBB_EF7F_6516_41BC_E4D7FAB3677F.text = qqq
+questionOption_CFB935BE_EF7F_650E_41EC_DC63CE0C7EEC.text = qqqqqqq
 
 ### Question
-question_CF8872E8_EF6F_1F33_41E4_D840B3074F42.title = Vc compraria isso? 
+question_CFEFD248_EF7F_1F72_41D6_92E1A8F2C50A.title = qqqqqqqqqqqqqqqqqq
 
 ### Question Screen
 quizQuestion_F1A1852C_EF69_6532_41E0_FC32BB541084.ok = OK
@@ -87,18 +87,18 @@ HotspotPanoramaOverlayArea_4FAFD5EE_446A_4C83_41C9_50A84E151E07.toolTip = Therma
 ### Floorplan
 
 ### Image
-imlevel_F1BC7926_EF6B_2D3E_41BD_2934FB5BA997.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_0.jpg
-imlevel_F1BC6926_EF6B_2D3E_41E7_DB983BFF20EA.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_1.jpg
-imlevel_F1BF9927_EF6B_2D3E_41C6_F1A7300A5D82.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_2.jpg
-imlevel_F1BFB927_EF6B_2D3E_41D0_F340A41E37E5.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_3.jpg
-imlevel_F1BC0905_EF6B_2AF2_41D7_36DE9FA0D47C.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_0.jpg
-imlevel_F1BC2905_EF6B_2AFD_41E4_60DD0B9A94CB.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_1.jpg
-imlevel_F1BC5906_EF6B_2AFE_41E9_5EB34536147F.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_2.jpg
-imlevel_F1BC4906_EF6B_2AFE_41E4_1C1247BFC011.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_3.jpg
-imlevel_F1BCC8E4_EF6B_2B32_419D_2096BD365457.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_0.jpg
-imlevel_F1BCF8E4_EF6B_2B32_41EB_40CA041069C5.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_1.jpg
-imlevel_F1BCE8E4_EF6B_2B32_41D2_ED977E96A5E6.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_2.jpg
-imlevel_F1BC18E4_EF6B_2B32_41E5_0CAB9C0662AA.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_3.jpg
+imlevel_F13FF412_EF79_3B16_41D3_C4A8E1AA2336.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_0.jpg
+imlevel_F13FE412_EF79_3B16_41E0_BBAB6108D876.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_1.jpg
+imlevel_F13F0412_EF79_3B16_41E7_EF1F596317A6.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_2.jpg
+imlevel_F13F2412_EF79_3B16_41E6_20792AF036B0.url = media/map_810031DD_8D2D_5025_41D8_C77E6268DA22_es_3.jpg
+imlevel_F13E13F3_EF79_3D16_41C9_CF4270984167.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_0.jpg
+imlevel_F13E03F3_EF79_3D16_41DF_92CD3DAFCBCD.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_1.jpg
+imlevel_F13E23F3_EF79_3D16_41EC_0EF2B1426225.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_2.jpg
+imlevel_F13E43F3_EF79_3D16_41EC_23197A40E7DF.url = media/map_8A7041EE_8D1A_F3E7_41DE_950B34D5B150_es_3.jpg
+imlevel_F13D73E0_EF79_3D32_41DC_660A993A50A0.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_0.jpg
+imlevel_F13D63E0_EF79_3D32_41C1_FC292767C7CD.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_1.jpg
+imlevel_F13E93E0_EF79_3D32_41CF_2D1CC7E0EA66.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_2.jpg
+imlevel_F13E83E1_EF79_3D32_419C_717CA2382151.url = media/map_8AD6600C_8D1A_F02B_41C9_C9DE167AC9E2_es_3.jpg
 imlevel_F1AD3D45_EF2B_257D_41EB_05163C392D82.url = media/popup_4404A119_555D_F631_41A5_1D53CF4C70E1_es_0_0.jpg
 imlevel_F1AD3D45_EF2B_257D_41EB_05163C392D82.url = media/popup_4404A119_555D_F631_41A5_1D53CF4C70E1_es_0_0.jpg
 imlevel_F1AD4D45_EF2B_257D_41D4_ACF934D9F85B.url = media/popup_4404A119_555D_F631_41A5_1D53CF4C70E1_es_0_1.jpg
@@ -138,8 +138,6 @@ imlevel_F187048E_EF2B_3B0F_41E1_7D4FDE94C902.url = media/popup_7297E618_7FB7_991
 imlevel_F1A95DFF_EF2B_250D_41B2_D0E0E91854F3.url = media/popup_729A5EEF_7FAA_8937_41D3_77EDFA4FCB33_es_0_0.png
 imlevel_F1AF5DFF_EF2B_250D_41E9_A6A3912F39EA.url = media/popup_729A5EEF_7FAA_8937_41D3_77EDFA4FCB33_es_0_1.png
 imlevel_F1AEBDD8_EF2B_2513_41D8_24D344CAB48D.url = media/popup_7312A408_7FFB_B8F9_41CB_E964D1647CC9_es_0_0.jpg
-imlevel_F1AEBDD8_EF2B_2513_41D8_24D344CAB48D.url = media/popup_7312A408_7FFB_B8F9_41CB_E964D1647CC9_es_0_0.jpg
-imlevel_F1AFCDD8_EF2B_2513_41DC_7B81FDAFB0C3.url = media/popup_7312A408_7FFB_B8F9_41CB_E964D1647CC9_es_0_1.jpg
 imlevel_F1AFCDD8_EF2B_2513_41DC_7B81FDAFB0C3.url = media/popup_7312A408_7FFB_B8F9_41CB_E964D1647CC9_es_0_1.jpg
 imlevel_F1AF9DA6_EF2B_253F_41E1_149E02C2117B.url = media/popup_73138298_7FFF_9918_41D7_8A10405EE379_es_0_0.jpg
 imlevel_F1AF9DA6_EF2B_253F_41E1_149E02C2117B.url = media/popup_73138298_7FFF_9918_41D7_8A10405EE379_es_0_0.jpg
@@ -190,7 +188,7 @@ Image_8FEB3DE2_80FF_8B29_41CF_0CE823C9CFC1.url = skin/Image_8FEB3DE2_80FF_8B29_4
 Label_59C25EAD_56AC_4A10_41CA_CB010D0C74A2.text = Photography by Jeff Davis
 
 ### Tooltip
-IconButton_E37CA9B7_E983_F12E_41E9_5FA0638D4D8D.toolTip = ACTIVATE VR MODE (MOBILE ONLY) V3
+IconButton_E37CA9B7_E983_F12E_41E9_5FA0638D4D8D.toolTip = ACTIVATE VR MODE (MOBILE ONLY) V4
 IconButton_EF8BF2CF_E362_CA64_41CB_5CE4DACA5634.toolTip = PANORAMA LIST
 IconButton_68CA5182_6070_7D3E_419C_BF635DC7C626.toolTip = PHOTO ALBUM
 IconButton_85265B23_8D1E_B01D_41E0_8CB2C82C1F5E.toolTip = SHOW FLOORPLANS
